# rust-wasm-i18n

./: .gitignore  Cargo.toml  README.md  rust-wasm-i18n.sublime-workspace
src/: lib.rs
wasm-no-std/: Cargo.toml  Makefile
wasm-no-std/pkg/: omnicu_no_std.twiggy-dominators.out  omnicu_no_std.wasm  omnicu_no_std.wat  omnicu_no_std_opt.twiggy-dominators.out  omnicu_no_std_opt.wasm  omnicu_no_std_opt.wat
wasm-no-std/src/: lib.rs
wasm-no-std/src/intl/: mod.rs
wasm-no-std/src/intl/numf/: format.rs  mod.rs
wasm-no-std/src/intl/util/: data.rs  formatted_value.rs  mod.rs
wasm-no-std/src/types/: mod.rs  no_std.rs  std.rs
wasm-no-webpack/: Cargo.toml  Makefile  Xargo.toml  hello_world_bg.wat  index.html  opt.wasm  opt.wat
wasm-no-webpack/pkg/: hello_world.js  hello_world_bg.wasm  hello_world_bg.wat  opt.wat
wasm-no-webpack/src/: lib.rs  ustr.rs
wasm-pack/: Cargo.toml  LICENSE_MIT
wasm-pack/www/: index.js  package-lock.json  package.json
wasm-xargo/: Cargo.toml  Makefile  README.md  defined-in-js.js  index.html
wasm-xargo/php/: run.php  run.sh  simple.php
wasm-xargo/pkg/: omnicu_xargo.d.ts  omnicu_xargo.js  omnicu_xargo.twiggy-dominators.out  omnicu_xargo.wasm  omnicu_xargo.wat  omnicu_xargo_bg.d.ts  omnicu_xargo_bg.opt.twiggy-dominators.out  omnicu_xargo_bg.opt.wasm  omnicu_xargo_bg.opt.wat  omnicu_xargo_bg.twiggy-dominators.out  omnicu_xargo_bg.wasm  omnicu_xargo_bg.wat
wasm-xargo/python/: Pipfile  demo.py
wasm-xargo/src/: lib.rs  numfmt.rs  numparse.rs  types.rs  ustr.rs
