[package]
name = "omnicu-no-std"
version = "0.1.0"
authors = ["Shane F. Carr <shane.carr@wustl.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wee_alloc = "0.4.5"
no-std-compat = { version = "0.4.0", features = [ "alloc", "compat_hash" ] }
arrayvec = { version = "0.5.1", default-features = false }
static_assertions = "1.1.0"

[dependencies.smallstr]
version = "0.2.0"
default-features = false
features = ["union"]
git = "https://github.com/murarth/smallstr"
rev = "c28b7514ce047c24ad181197bf0c55321edd05df"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true

[features]
dummy = []
panic_immediate_abort = []
std = ["no-std-compat/std"]
