[package]
name = "hello_world"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.50"
wee_alloc = "0.4.5"
console_error_panic_hook = "0.1.6"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true

# [features]
# default=["panic_immediate_abort"]