[package]
name = "omnicu-xargo"
version = "0.1.0"
authors = ["Shane F. Carr <shane.carr@wustl.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wee_alloc = "0.4.5"
wasm-bindgen = "0.2.54"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true

[features]
panic_immediate_abort = []
