[package]
name = "omnicu-xargo"
version = "0.1.0"
authors = ["Shane F. Carr <shane.carr@wustl.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wee_alloc = "0.4.5"
wasm-bindgen = "0.2.54"
# unic-locale = "0.7.1"
# unic-locale-impl = "0.7.1"
unic-langid = { version = "0.7.1", features = ["unic-langid-macros"] }
unic-langid-impl = "0.7.1"
# unic-langid = { path = "../external/unic-locale/unic-langid", features = ["unic-langid-macros"] }
# unic-langid-impl = { path = "../external/unic-locale/unic-langid-impl" }

[profile.dev]
panic = "unwind"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true

[features]
panic_immediate_abort = []
